Customization to show msg rate and data rate

--- a/solace_prometheus_exporter.ini
+++ b/solace_prometheus_exporter.ini
@@ -3,7 +3,8 @@
 listenAddr=0.0.0.0:9628
 
 # Base URI on which to scrape Solace broker.
-scrapeUri=http://localhost:8080
+#scrapeUri=http://192.168.130.39:80
+scrapeUri=http://192.168.40.233:8080
 
 # Basic Auth username for http scrape requests to Solace broker.
 username=admin
@@ -60,5 +61,8 @@ QueueStats=*|*
 QueueDetails=*|*
 
 [endpoint.my-sample]
-QueueStats.0=*|internal/tms/iad/warnap*
-QueueStats.1=*|bridge_*
+Vpn=*|*
+VpnStats=*|*
+ClientStats=*|*
+QueueRates=*|*
+QueueDetails=*|*
