Enable NAB buffer load factor monitoring

--- a/solace_prometheus_exporter.ini
+++ b/solace_prometheus_exporter.ini
@@ -3,8 +3,8 @@
 listenAddr=0.0.0.0:9628
 
 # Base URI on which to scrape Solace broker.
-#scrapeUri=http://192.168.130.39:80
-scrapeUri=http://192.168.40.233:8080
+scrapeUri=http://192.168.128.27:80
+#scrapeUri=http://192.168.40.233:8080
 
 # Basic Auth username for http scrape requests to Solace broker.
 username=admin
@@ -62,9 +62,10 @@ QueueDetails=*|*
 
 [endpoint.my-sample]
 Global=*|*
-Health=*|*
+#Health=*|*
+Memory=*|*
 Vpn=*|*
 VpnStats=*|*
-ClientStats=*|*
-QueueRates=*|*
-QueueDetails=*|*
+#ClientStats=*|*
+#QueueRates=*|*
+#QueueDetails=*|*
